location bounds and fix radius
